editor+tools: senior review wave 1 — layer.xml surgery, dead code out, last JOptionPane evicted
- layer.xml: hand-written JS loader Actions block deleted (collided with
  the @ActionReferences-generated set and scrambled the context menu),
  dead JavaScriptEditorKit factory entry deleted, duplicate Editors
  folders merged
- CompletionEdits: one shared document-replace helper for 11 completion
  items; BadLocationException logs at INFO, query races at FINE — no
  more red exception dialog for a malformed package.json being edited
- CodeIndexService (dead v0.x, broken watch loop) and the entire unused
  tools.build package deleted; tools.build un-exported
- DapDebugAction: interruptible daemon RP; failed launches now reap the
  spawned dlv/debugpy adapter instead of orphaning a listener
- NpmService.listGlobalPackages → ProcessSupport.runBounded; UTF-8
  explicit at the last two charset-naked sites (WebProject, NpmService)
- NpmExplorer: last JOptionPane → DialogDisplayer; error node now says
  why package.json failed; selection via TopComponent registry

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>